<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityDetailSmartphone"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/sphones_name"
            android:gravity="center"
            android:id="@+id/tv_item_name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="12dp">

            <FrameLayout
                style="@style/ImgFrame" >

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="12dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp">

                    <ImageView
                        style="@style/ImgViewDetail"
                        android:id="@+id/item_photo1"
                        tools:src="@color/colorAccent"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

            </FrameLayout>

            <FrameLayout
                style="@style/ImgFrame" >

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="12dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp">

                    <ImageView
                        style="@style/ImgViewDetail"
                        android:id="@+id/item_photo2"
                        tools:src="@color/colorAccent"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

            </FrameLayout>

            <FrameLayout
                style="@style/ImgFrame">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="12dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp">

                    <ImageView
                        style="@style/ImgViewDetail"
                        android:id="@+id/item_photo3"
                        tools:src="@color/colorAccent"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

            </FrameLayout>

        </LinearLayout>

        <TextView
            android:text="@string/specs_sphone"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.cardview.widget.CardView
            style="@style/CardViewDetailSphone"
            app:cardCornerRadius="10dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp">

                <TableRow
                    style="@style/Table_Row">

                    <TextView
                        style="@style/textview_tablerow"
                        android:text="@string/rilis" />

                    <TextView
                        android:id="@+id/tv_rilis"
                        style="@style/textview_tablerow2"
                        android:text="@string/rilis" />
                </TableRow>

                <TableRow
                    style="@style/Table_Row">

                    <TextView
                        android:text="@string/harga"
                        style="@style/textview_tablerow" />

                    <TextView
                        android:id="@+id/tv_harga"
                        style="@style/textview_tablerow2"
                        android:text="@string/harga"/>
                </TableRow>

                <TableRow
                    style="@style/Table_Row" >

                    <TextView
                        android:text="@string/chipset"
                        style="@style/textview_tablerow" />

                    <TextView
                        android:id="@+id/tv_chipset"
                        style="@style/textview_tablerow2"
                        android:text="@string/chipset" />
                </TableRow>

                <TableRow
                    style="@style/Table_Row" >

                    <TextView
                        android:text="@string/cpu"
                        style="@style/textview_tablerow" />

                    <TextView
                        android:id="@+id/tv_cpu"
                        style="@style/textview_tablerow2"
                        android:text="@string/cpu" />
                </TableRow>

                <TableRow
                    style="@style/Table_Row" >

                    <TextView
                        android:text="@string/gpu"
                        style="@style/textview_tablerow" />

                    <TextView
                        android:id="@+id/tv_gpu"
                        style="@style/textview_tablerow2"
                        android:text="@string/gpu"/>
                </TableRow>

                <TableRow
                    style="@style/Table_Row" >

                    <TextView
                        android:text="@string/ram"
                        style="@style/textview_tablerow" />

                    <TextView
                        android:id="@+id/tv_ram"
                        style="@style/textview_tablerow2"
                        android:text="@string/ram"/>
                </TableRow>

                <TableRow
                    style="@style/Table_Row" >

                    <TextView
                        android:text="@string/memori_internal"
                        style="@style/textview_tablerow" />

                    <TextView
                        android:id="@+id/tv_memori_internal"
                        style="@style/textview_tablerow2"
                        android:text="@string/memori_internal"/>
                </TableRow>

                <TableRow
                    style="@style/Table_Row" >

                    <TextView
                        android:text="@string/memori_eksternal"
                        style="@style/textview_tablerow" />

                    <TextView
                        android:id="@+id/tv_memori_eksternal"
                        style="@style/textview_tablerow2"
                        android:text="@string/memori_eksternal"/>
                </TableRow>

                <TableRow
                    style="@style/Table_Row" >

                    <TextView
                        style="@style/textview_tablerow"
                        android:text="@string/kamera_belakang"/>

                    <TextView
                        android:id="@+id/tv_kamera_belakang"
                        style="@style/textview_tablerow2"
                        android:text="@string/kamera_belakang"/>
                </TableRow>

                <TableRow
                    style="@style/Table_Row" >

                    <TextView
                        android:text="@string/kamera_depan"
                        style="@style/textview_tablerow" />

                    <TextView
                        android:id="@+id/tv_kamera_depan"
                        style="@style/textview_tablerow2"
                        android:text="@string/kamera_depan"/>
                </TableRow>

                <TableRow
                    style="@style/Table_Row" >

                    <TextView
                        android:text="@string/baterai"
                        style="@style/textview_tablerow" />

                    <TextView
                        android:id="@+id/tv_baterai"
                        style="@style/textview_tablerow2"
                        android:text="@string/baterai"/>
                </TableRow>

            </TableLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardViewDetailSphone"
            app:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/tv_set_detail"
                android:text="@string/detail"
                android:textColor="@android:color/black"
                android:justificationMode="inter_word"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:targetApi="o" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_set_favorite"
                style="@style/ButtonGeneral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:text="@string/favorite"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_set_share"
                style="@style/ButtonGeneral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="12dp"
                android:text="@string/share"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>